Add support of rename / move / batch download file.
